added a basic player. it doesn't seek, but will change volume

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,16 +1,7 @@
 extend layout
 block content
-  p
-    | Vivamus hendrerit arcu sed erat molestie
-    | vehicula. Sed auctor neque eu tellus
-    | rhoncus ut eleifend nibh porttitor. Ut in.
-  p
-    | Donec congue lacinia dui, a porttitor
-    | lectus condimentum laoreet. Nunc eu
-    | ullamcorper orci. Quisque eget odio ac
-    | lectus vestibulum faucibus eget in metus.
-    | In pellentesque faucibus vestibulum. Nulla
-    | at nulla justo, eget luctus tortor.
+  h2 Audio - mp3
+  audio(id="player", src="/../files/19-FloatOn(feat.CharliXCX).mp3", type="audio/mp3", controls="controls")
 block sidebar
   .widget
     h1 Widget
