--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -17,28 +17,61 @@ global-reset()
  * Store the main color and
  * background color as variables
  */
-main-color = #84b3aa
-background-color = #edd3b3
+main-color = #c1333f
+main-color-light = #ff6563
+background-color = #ebebeb
+black = #000
+white = #fff
+
+controller-height = 50px
+navbar-height = 60px
 
 body
-  font-family 'Amatic SC'
+  font-family 'Montserrat'
   background-color background-color
   color #444
 
-header
-  font-family 'Montserrat'
-  padding 50px 10px
-  color #fff
-  font-size 25px
-  text-align center
+.navbar
+    padding 0px 15%
+    font-size 20px
+    background-color black
+    height navbar-height
+    overflow visible
+    color white
+    margin-bottom 20px
+    color #fff
 
-  /*
-   * Note the use of the `main-color`
-   * variable and the `darken` function
-   */
-  background-color main-color
-  border-bottom 1px solid darken(main-color, 30%)
-  text-shadow 0px -1px 0px darken(main-color, 30%)
+#brand
+    float left
+    padding (navbar-height * 0.1)
+    top 0px
+    display inline
+    width 100px
+
+#brandImg
+    height (navbar-height * 0.8)
+
+a
+    color main-white
+    text-decoration none
+
+.divider
+    background-color white
+    width 3px
+    top 15px
+    height 30px
+    display inline
+    margin 0px
+    position absolute
+
+.nav-user
+    float right
+    display inline
+    line-height navbar-height
+
+.nav-user > a
+    margin 20px
+    color white
 
 .container
   width 500px
@@ -48,9 +81,6 @@ header
 .main-content
   float left
   width 300px
-
-  p
-    margin-bottom 20px
 
 .sidebar
   float left
@@ -70,7 +100,7 @@ header
     box-shadow inset 0px 0px 0px 3px rgba(#fff, 0.8), 0px 3px 0px -2px rgba(#000, 0.1)
 
     h1
-      font-family 'Quicksand'
+      font-family 'Montserrat'
       margin 13px 10px 4px
       padding-bottom 10px
       border-bottom 1px dotted #ddd
@@ -86,8 +116,56 @@ p
   line-height 1.8
 
 footer
-  width 500px
-  margin 50px auto
-  border-top 1px dotted #ccc
+  width 100%
+  bottom 0
   padding-top 5px
   font-size 13px
+  position fixed
+  background-color black
+  color white
+
+.wavy
+  margin 20px
+  margin-left auto
+  margin-right auto
+  width 70%
+
+.timeWave
+  margin-left auto
+  margin-right auto
+
+.wavy-time
+  display inline
+  position relative
+  bottom -45px
+
+#currentTime
+  right 35%
+
+#endTime
+  left 35%
+
+.controller
+  text-align center
+  margin 20px
+  height controller-height
+  line-height controller-height
+
+#play-pause
+  height controller-height
+  margin-right auto
+  margin-left auto
+
+.skips
+  display inline
+  position relative
+  height (controller-height * 2 / 3)
+  bottom (controller-height * 1 / 6)
+
+#mute
+  height (controller-height * 1 / 3)
+  bottom (controller-height * 1 / 3)
+  left 10%
+
+#repeat
+  left 15%
