--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -51,9 +51,22 @@ body
 #brandImg
     height (navbar-height * 0.8)
 
+#signup
+  color main-color
+
 a
     color main-white
     text-decoration none
+
+h1
+  font-size 32px
+  margin-bottom 30px
+
+.browseCat
+  margin-left 50px
+
+.browseCat > p
+  margin-bottom 15px
 
 .divider
     background-color white
