--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -128,9 +128,22 @@ body {
 #brandImg {
   height: 48px;
 }
+#signup {
+  color: #c1333f;
+}
 a {
   color: main-white;
   text-decoration: none;
+}
+h1 {
+  font-size: 32px;
+  margin-bottom: 30px;
+}
+.browseCat {
+  margin-left: 50px;
+}
+.browseCat > p {
+  margin-bottom: 15px;
 }
 .divider {
   background-color: #fff;
