--- a/views/index.jade
+++ b/views/index.jade
@@ -1,4 +1,14 @@
 extend layout
 block content
-  h2 Audio - mp3
+  h1 Artists
+  div.resultsPanel
+    div.resultItem
+        img.albumCover(src='/images/fleetfoxes.jpg')
+        p.resultBold Fleet Foxes
+        p.resultLame songs: 47
+    div.resultItem
+        img.albumCover(src='/images/grizzly.png')
+        p.resultBold Grizzly Bear
+        p.resultLame songs: 64
+
   
