--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -87,13 +87,26 @@ h1
     color white
 
 .container
-  width 500px
+  width 100%
+  max-width 1200px
   margin 50px auto
   overflow hidden
 
-.main-content
-  float left
-  width 300px
+.resultsPanel
+  width 90%
+  max-width 1100px
+  margin-left auto
+  margin-right auto
+  background-color #dadada
+  padding 30px
+
+.albumCover
+  width 150px
+
+.container > h1
+  margin-left 5%
+  margin-bottom 20px
+  color main-color
 
 .sidebar
   float left
@@ -182,3 +195,17 @@ footer
 
 #repeat
   left 15%
+
+.resultBold
+  font-size 20px
+  color black
+  line-height 20px
+
+.resultLame
+  font-size 12px
+  color lighten(black, 50%)
+  line-height 20px
+
+.resultItem
+  display inline-block
+  margin 20px
