--- a/views/layout.jade
+++ b/views/layout.jade
@@ -23,7 +23,7 @@ html
         div.nav-user
             a#login(href='/login') login
             div.divider
-            a#signup(href='/signup') signup
+            a#signup(href='/artists') signup
 
     .container
         block content
