--- a/views/index.jade
+++ b/views/index.jade
@@ -1,6 +1,6 @@
 extend layout
 block content
-  h1 Artists
+  h1.resultsTitle Poopy
   div.resultsPanel
     div.resultItem
         img.albumCover(src='/images/fleetfoxes.jpg')
