--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,6 +6,7 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='/stylesheets/sliders.css')
     link(rel='stylesheet', href='/stylesheets/buttons.css')
+    link(rel='stylesheet', href='/stylesheets/songs.css')
     script(src='/javascripts/jquery_2.1.0.js')
     script(src='/javascripts/jquery_ui_1.10.4.min.js')
     script(src='/javascripts/jQueryRotateCompressed.js')
