songs works from database

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -169,6 +169,7 @@ h1 {
   margin-right: auto;
   background-color: #dadada;
   padding: 30px;
+  margin-bottom: 12%;
 }
 .albumCover {
   width: 150px;
