--- a/public/stylesheets/sliders.css
+++ b/public/stylesheets/sliders.css
@@ -4,7 +4,7 @@
   width: 25%;
   height: 85%;
   background-color: #131313;
-  position: absolute;
+  position: fixed;
   z-index: 0;
   display: none;
   padding-left: 50px;
@@ -16,7 +16,7 @@
   width: 3em;
   padding: 0.1em;
   background-color: #f00;
-  position: absolute;
+  position: fixed;
   top: 30%;
   z-index: 10;
   cursor: pointer;
