--- a/public/stylesheets/sliders.styl
+++ b/public/stylesheets/sliders.styl
@@ -6,7 +6,7 @@
    width: 25%;
    height: 85%;
    background-color: main-panel;
-   position: absolute;
+   position: fixed;
    z-index: 0;
    display: none;
    padding-left 50px
@@ -18,7 +18,7 @@
     width: 3em;
     padding: 0.1em;
     background-color: red;
-    position: absolute;
+    position: fixed;
     top: 30%;
     z-index: 10;
     cursor: pointer;
