--- a/public/stylesheets/songs.css
+++ b/public/stylesheets/songs.css
@@ -12,7 +12,7 @@
   overflow: hidden;
   position: relative;
 }
-.albumCover {
+.resultItemSong .albumCover {
   height: 50px;
   width: 50px;
   display: inline;
