songs and albums/artists actually work well now.  also you can load songs in theory

--- a/public/stylesheets/mixins.styl
+++ b/public/stylesheets/mixins.styl
@@ -2,6 +2,7 @@ main-color = #c1333f
 main-color-light = #ff6563
 background-color = #ebebeb
 main-panel = #131313
+result-panel = #dadada
 black = #000
 white = #fff
 
