--- a/public/stylesheets/songs.css
+++ b/public/stylesheets/songs.css
@@ -11,12 +11,21 @@
   border-top: 2px solid #4c4c4c;
   overflow: hidden;
   position: relative;
+  cursor: pointer;
 }
 .resultItemSong .albumCover {
   height: 50px;
   width: 50px;
   display: inline;
   float: left;
+}
+.resultItemSong:hover {
+  background-color: #101010;
+  transition: background 0.1s ease-in-out;
+  -webkit-transition: background 0.1s ease-in-out;
+  -moz-transition: background 0.1s ease-in-out;
+  -ms-transition: background 0.1s ease-in-out;
+  -o-transition: background 0.1s ease-in-out;
 }
 .title,
 .artist,
