--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -172,7 +172,7 @@ h1 {
   margin-bottom: 12%;
 }
 .albumCover {
-  width: 150px;
+  width: 200px;
 }
 .container > h1 {
   margin-left: 5%;
@@ -238,18 +238,39 @@ footer {
   left: 15%;
 }
 .resultBold {
-  font-size: 20px;
+  font-size: 18px;
   color: #000;
-  line-height: 20px;
+  line-height: 18px;
+  height: 18px;
+  overflow: hidden;
 }
 .resultLame {
   font-size: 12px;
-  color: #808080;
-  line-height: 20px;
+  color: #666;
+  line-height: 12px;
+  height: 12px;
+  overflow: hidden;
 }
 .resultItem {
   display: inline-block;
   margin: 20px;
+  width: 200px;
+  overflow: hidden;
+  background-color: #c4c4c4;
+  padding: 5px;
+  top: 0;
+}
+.resultItem:hover {
+  background-color: #999;
+  -webkit-transition: background 0.1s ease-in-out;
+  -moz-transition: background 0.1s ease-in-out;
+  -o-transition: background 0.1s ease-in-out;
+  -ms-transition: background 0.1s ease-in-out;
+  transition: background 0.1s ease-in-out;
+  -webkit-transition: background 0.1s ease-in-out;
+  -moz-transition: background 0.1s ease-in-out;
+  -ms-transition: background 0.1s ease-in-out;
+  -o-transition: background 0.1s ease-in-out;
 }
 #uploadBtn {
   margin-left: 27%;
