--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -10,6 +10,8 @@
 
 @import 'mixins'
 
+album-width = 200px
+
 global-reset()
 
 body
@@ -83,12 +85,12 @@ h1
   max-width 1100px
   margin-left auto
   margin-right auto
-  background-color #dadada
+  background-color result-panel
   padding 30px
   margin-bottom 12%
 
 .albumCover
-  width 150px
+  width album-width
 
 .container > h1
   margin-left 5%
@@ -154,18 +156,31 @@ footer
   left 15%
 
 .resultBold
-  font-size 20px
+  font-size 18px
   color black
-  line-height 20px
+  line-height 18px
+  height 18px
+  overflow hidden
 
 .resultLame
   font-size 12px
-  color lighten(black, 50%)
-  line-height 20px
+  color lighten(black, 40%)
+  line-height 12px
+  height 12px
+  overflow hidden
 
 .resultItem
   display inline-block
   margin 20px
+  width album-width
+  overflow hidden
+  background-color darken(result-panel, 10%)
+  padding 5px
+  top 0
+
+.resultItem:hover
+  background-color darken(result-panel, 30%)
+  transitions(0.1s)
 
 #uploadBtn
   margin-left 27%
