--- a/views/index.jade
+++ b/views/index.jade
@@ -9,14 +9,14 @@ block content
         p.album Album
         p.length Length
         p.track Track
-    div.resultItemSong
+    div.resultItemSong(onclick='clickedSong(this)', id='../files/FloatOn.mp3')
         img.albumCover(src='/images/fleetfoxes.jpg')
         p.title Montezuma
         p.artist Fleet Foxes
         p.album Helplessness Blues
         p.length 3:45
         p.track 4
-    div.resultItemSong
+    div.resultItemSong(onclick='clickedSong(this)', id='../files/05\ -\ Brain\ Cells\ [prod\ by\ Peter\ Cottontale].mp3')
         img.albumCover(src='/images/grizzly.png')
         p.title Yet Again
         p.artist Grizzly Bear
