Can now click on Albums to limit the song results to just that album.  Also, basic file-upload works, though it doesn't put it in the database.  It is pretty though.

--- a/public/stylesheets/sliders.css
+++ b/public/stylesheets/sliders.css
@@ -11,6 +11,19 @@
   padding-top: 50px;
   color: #fff;
 }
+.sliderPane form {
+  margin-top: 30%;
+}
+.sliderPane form #uploadFile {
+  display: inline;
+  font-size: 10px;
+}
+input {
+  opacity: 0;
+  cursor: pointer;
+  position: absolute;
+  top: -50px;
+}
 .sliderToggle {
   height: 3em;
   width: 3em;
