--- a/public/stylesheets/buttons.styl
+++ b/public/stylesheets/buttons.styl
@@ -33,9 +33,30 @@
     background-color: lighten(main-color, 7%)
     box-shadow: 0px 3px 0px 0px darken(main-color, 60%);
     padding: 5px;
+    display block
 
 .flat-button-1:hover
     background-color: darken(main-color, 7%);
 
 .flat-button-1:active
     box-shadow: 0px 1px 0px 0px darken(main-color, 60%);
+
+.flat-button-2
+    height: 25px;
+    width: 15%;
+    margin 10px
+    min-width: 125px;
+    background-color: lighten(main-color, 7%)
+    box-shadow: 0px 3px 0px 0px darken(main-color, 60%);
+    padding: 5px;
+    font-size 16px
+    line-height 25px
+    left 0px
+
+.flat-button-2:hover
+    background-color: darken(main-color, 7%);
+
+.flat-button-2:active
+    box-shadow: 0px 1px 0px 0px darken(main-color, 60%);
+    padding-top: 5px;
+    line-height 27px
