--- a/views/layout.jade
+++ b/views/layout.jade
@@ -33,7 +33,7 @@ html
         h1 browse by
         div.browseCat
             p#artists(onclick="ajaxArtists()", style="cursor: pointer;") artists
-            p#albums(onclick="ajaxAlbums()", style="cursor: pointer;") albums
+            p#albums(onclick="ajaxAlbums('none','none')", style="cursor: pointer;") albums
             p#songs(onclick="ajaxSongs('none','none','none')", style="cursor: pointer;") songs
         form(action="/", method="post", enctype="multipart/form-data")
             input(type="file", name="uploadSong", id="inputUpload", onchange="document.getElementById('uploadFile').innerHTML=this.value;")
