--- a/views/layout.jade
+++ b/views/layout.jade
@@ -48,6 +48,7 @@ html
 
       div.controller
         div.wavy-time#currentTime 0:00
+        div#play-name no song selected
         img.skips#skip-left(src='/images/skipBackButton.svg')
         img#play-pause(src='/images/playButton.svg')
         img.skips#skip-right(src='/images/skipForwardButton.svg')
