--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -112,6 +112,12 @@ footer
   background-color black
   color white
 
+#play-name
+  position fixed
+  left 0
+  width 45%
+  text-align center
+
 .wavy
   margin 20px
   margin-left auto
@@ -128,10 +134,14 @@ footer
   bottom -45px
 
 #currentTime
-  right 35%
+  position fixed
+  bottom 22px
+  left 5%
 
 #endTime
-  left 35%
+  position fixed
+  bottom 22px
+  right 5%
 
 .controller
   text-align center
