Search bar works now.  Minor default input error as it doesn't let the search string have spaces.

--- a/public/stylesheets/sliders.styl
+++ b/public/stylesheets/sliders.styl
@@ -20,11 +20,11 @@
         display inline
         font-size 10px
 
-input
-   opacity 0
-   cursor pointer
-   position absolute
-   top -50px
+#inputUpload
+     opacity 0
+     cursor pointer
+     position absolute
+     top -50px
 
 .sliderToggle
     height: 3em;
