--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -151,7 +151,8 @@ h1 {
   position: absolute;
 }
 .nav-user {
-  float: right;
+  position: absolute;
+  left: 50%;
   display: inline;
   line-height: 60px;
 }
