--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -69,7 +69,9 @@ h1
     position absolute
 
 .nav-user
-    float right
+    // float right
+    position absolute
+    left 50%
     display inline
     line-height navbar-height
 
