--- a/views/layout.jade
+++ b/views/layout.jade
@@ -22,9 +22,12 @@ html
         a#brand(href='/')
             img#brandImg(src='/images/brand.svg')
         div.nav-user
-            a#login(href='/login') login
-            div.divider
-            a#signup(href='/artists') signup
+            form.searchForm
+                input#searchInput(type='search', placeholder='Search', onkeydown="return searchEnter();")
+                select#searchType
+                    option(value='song') Song
+                    option(value='artist') Artist
+                    option(value='album') Album
 
     .container
         block content
@@ -34,7 +37,7 @@ html
         div.browseCat
             p#artists(onclick="ajaxArtists()", style="cursor: pointer;") artists
             p#albums(onclick="ajaxAlbums('none','none')", style="cursor: pointer;") albums
-            p#songs(onclick="ajaxSongs('none','none','none')", style="cursor: pointer;") songs
+            p#songs(onclick="ajaxSongs('none','none','none','none')", style="cursor: pointer;") songs
         form(action="/", method="post", enctype="multipart/form-data")
             input(type="file", name="uploadSong", id="inputUpload", onchange="document.getElementById('uploadFile').innerHTML=this.value;")
             p.flat-button.flat-button-2(type="button", onclick="document.getElementById('inputUpload').click();") Choose File
