added search functionality and editability of the title

--- a/public/stylesheets/songs.css
+++ b/public/stylesheets/songs.css
@@ -59,6 +59,15 @@
   text-align: center;
   background-color: #141414;
 }
+.editButton {
+  margin: 7.5px;
+  width: 35px;
+  height: 35px;
+  z-index: 100;
+}
+.editButton:hover {
+  opacity: 0.6;
+}
 .length {
   width: 5%;
   float: right;
