--- a/public/stylesheets/songs.styl
+++ b/public/stylesheets/songs.styl
@@ -60,6 +60,15 @@ song-height = 50px
 	text-align center
 	background-color song-dark-bkgrd
 
+.editButton
+    margin (song-height * 0.15)
+    width (song-height * 0.7)
+    height (song-height * 0.7)
+    z-index 100
+
+.editButton:hover
+    opacity 0.6
+
 .length
 	width 5%
 	float right
