--- a/public/stylesheets/songs.styl
+++ b/public/stylesheets/songs.styl
@@ -45,7 +45,7 @@ song-height = 50px
 	float left
 
 .artist
-	width 15%
+	width 18%
 	float left
 	background-color song-dark-bkgrd
 	color header-bkgrd
@@ -61,16 +61,16 @@ song-height = 50px
 	background-color song-dark-bkgrd
 
 .editButton
-    margin (song-height * 0.15)
-    width (song-height * 0.7)
-    height (song-height * 0.7)
+    margin (song-height * 0.2) 0px
+    width (song-height * 0.6)
+    height (song-height * 0.6)
     z-index 100
 
 .editButton:hover
     opacity 0.6
 
 .length
-	width 5%
+	width 3%
 	float right
 	text-align center
 	color header-bkgrd
