--- a/views/layout.jade
+++ b/views/layout.jade
@@ -50,14 +50,12 @@ html
       div.queueContainer
 
       div.controller
-        div.wavy-time#currentTime 0:00
-        div#play-name no song selected
+        div#play-name Welcome - Spotifeh Team
         img.skips#skip-left(src='/images/skipBackButton.svg')
         img#play-pause(src='/images/playButton.svg')
         img.skips#skip-right(src='/images/skipForwardButton.svg')
         img.skips#mute(src='/images/volumeFull.svg')
         img.skips#repeat(src='/images/repeatFalse.svg')
-        div.wavy-time#endTime 0:00
       div.timeWave
         div.wavy
             div.waveform
@@ -65,5 +63,5 @@ html
                 div.progress-bar.progress-bar-info
             span.glyphicon.glyphicon-play.profile-track-play-pause(style='margin-top:5px')
             script.
-                loadMusic('../files/FloatOn.mp3');
+                loadMusic('../files/roscoeswetsuit/thisis/parody.mp3');
         
