playlists work! no visualization of them yet

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -13,6 +13,7 @@ html
     script(src='/javascripts/berniecode-animator.js')
     script(src='/javascripts/wavesurfer.min.js')
     script(src='/javascripts/handler.js')
+    script(src='/javascripts/playlistMgr.js')
     script(src='/javascripts/frontend.js')
     script(src='/javascripts/slider.js')
 
@@ -52,7 +53,7 @@ html
       div.controller
         div#play-name Welcome - Spotifeh Team
         img.skips#skip-left(src='/images/skipBackButton.svg')
-        img#play-pause(src='/images/playButton.svg')
+        img#play-pause(src='/images/pauseButton.svg')
         img.skips#skip-right(src='/images/skipForwardButton.svg')
         img.skips#mute(src='/images/volumeFull.svg')
         img.skips#repeat(src='/images/repeatFalse.svg')
