--- a/views/layout.jade
+++ b/views/layout.jade
@@ -47,9 +47,14 @@ html
     div.sliderToggle#pictureSlider
         img#sliderImg(src='/images/slider.svg')
 
+    div.sliderPane#playlistPane
+        h1 Playlist
+        div#playlistContainer stuff
+    div.sliderToggle#playlistSlider
+        img#sliderImg2(src='/images/slider.svg')
+
     footer
       div.queueContainer
-
       div.controller
         div#play-name Welcome - Spotifeh Team
         img.skips#skip-left(src='/images/skipBackButton.svg')
