--- a/public/stylesheets/sliders.styl
+++ b/public/stylesheets/sliders.styl
@@ -1,16 +1,16 @@
 @import 'mixins'
 
 .sliderPane
-   top: 60px;
+   top: 0px;
    right: 0px;
    width: 22%;
-   height: 85%;
+   height: (85% + 60px);
    background-color: main-panel;
    position: fixed;
    z-index: 0;
    display: none;
    padding-left 50px
-   padding-top 50px
+   padding-top 110px
    color #fff
 
    form
@@ -19,6 +19,9 @@
       #uploadFile
         display inline
         font-size 10px
+
+#playlistPane
+  left: 0px;
 
 #inputUpload
      opacity 0
@@ -43,15 +46,21 @@
     background-color: main-color
     box-shadow: 0px 3px 0px 0px darken(main-color, 50%)
 
-#sliderImg
+#sliderImg, #sliderImg2
   width 1.5em
   margin-left auto
   margin-right auto
   top 12px
   position relative
 
-#pictureSlider:hover
+#pictureSlider:hover, #playlistSlider:hover
   background-color: darken(main-color,7%)
 
-#pictureSlider:active
+#pictureSlider:active, #playlistSlider:active
   background-color: darken(main-color,15%)
+
+#playlistSlider
+    left: 0;
+    transitions(0.1s)
+    background-color: main-color
+    box-shadow: 0px 3px 0px 0px darken(main-color, 50%)
