--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -113,6 +113,7 @@ body {
   color: #fff;
   margin-bottom: 20px;
   color: #fff;
+  z-index: 1000;
 }
 #brand {
   float: left;
@@ -259,6 +260,22 @@ footer {
   overflow: hidden;
 }
 .resultLame {
+  font-size: 12px;
+  color: #666;
+  line-height: 12px;
+  height: 12px;
+  overflow: hidden;
+}
+.resultBoldPlay {
+  margin-left: 20px;
+  font-size: 18px;
+  color: #ccc;
+  line-height: 18px;
+  height: 18px;
+  overflow: hidden;
+}
+.resultLamePlay {
+  margin-left: 20px;
   font-size: 12px;
   color: #666;
   line-height: 12px;
