--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -31,6 +31,7 @@ body
     color white
     margin-bottom 20px
     color #fff
+    z-index 1000
 
 #brand
     float left
@@ -178,6 +179,22 @@ footer
   overflow hidden
 
 .resultLame
+  font-size 12px
+  color lighten(black, 40%)
+  line-height 12px
+  height 12px
+  overflow hidden
+
+.resultBoldPlay
+  margin-left 20px
+  font-size 18px
+  color darken(white, 20%)
+  line-height 18px
+  height 18px
+  overflow hidden
+
+.resultLamePlay
+  margin-left 20px
   font-size 12px
   color lighten(black, 40%)
   line-height 12px
