--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,7 +2,7 @@ doctype
 html
   head
     meta(http-equiv="Content-Type", content="text/html; charset=utf-8")
-    title #{title} - My Site
+    title #{title} - Spotifeh
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='/stylesheets/sliders.css')
     link(rel='stylesheet', href='/stylesheets/buttons.css')
